# agent-skill-lint

./: .gitignore  .skill-lint.yaml.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  slugs.json
.github/workflows/: publish.yml  update-slugs.yml
scripts/: collect_slugs.py
src/skill_lint/: __init__.py  cli.py  config.py  models.py  runner.py  scorer.py  simulator.py  slug_registry.py  sync.py
src/skill_lint/parsers/: __init__.py  frontmatter.py  markdown_body.py
src/skill_lint/reporters/: __init__.py  console.py  json_reporter.py
src/skill_lint/rules/: __init__.py  base.py
src/skill_lint/rules/roo/: __init__.py  body_rules.py  cross_skill_rules.py  description_rules.py  frontmatter_rules.py  registry.py
tests/: conftest.py  test_v020_features.py
tests/fixtures/invalid/: broken_link.md  missing_name.md  short_description.md  stub_skill.md
tests/fixtures/valid/: good_skill.md
tests/rules/: test_body_rules.py  test_cross_skill_rules.py  test_description_rules.py  test_frontmatter_rules.py
