[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skill-lint"
version = "0.1.0"
description = "Static quality linter for AI agent skill definitions (SKILL.md files)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["ai", "agents", "skills", "linter", "roo", "claude", "quality", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.1.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/hananel-e/agent-skill-lint"
Repository = "https://github.com/hananel-e/agent-skill-lint"
"Bug Tracker" = "https://github.com/hananel-e/agent-skill-lint/issues"
Changelog = "https://github.com/hananel-e/agent-skill-lint/blob/main/CHANGELOG.md"

[project.scripts]
skill-lint = "skill_lint.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_lint"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    ".skill-lint.yaml.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/skill_lint"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
